<resources>
    <string name="app_name">Digiplanner</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_anadir">Añadir</string>
    <string name="title_cuentapersonal">Cuenta</string>
    <string name="title_postits">Postit</string>
    <string name="title_lista">Lista</string>

    <string name="title_activity_anadir_fragment">AnadirFragment</string>
    <string name="title_activity_posits_fragment">PositsFragment</string>
    <string name="title_activity_tablas_fragment">TablasFragment</string>
    <string name="title_activity_cuenta_personal_fragment">CuentaPersonalFragment</string>
    <string name="foto_cuenta" />
    <string name="title_activity_acceder" />
    <string name="title_activity_accedernuevousuario" />
    <string name="title_activity_accederolvidadousuario" />
    <string name="title_activity_accederappp" />
    <string name="introduce_email">Introduce email</string>
    <string name="introduce_contrase_a">Introduce contraseña</string>
    <string name="olvide_mi_contrase_a">Olvide mi contraseña</string>
    <string name="fecha">Fecha</string>
    <string name="title_contactos">Contactos guardados</string>
    <string name="_07_00">07:00</string>
    <string name="_08_00">08:00</string>
    <string name="evento">Evento</string>
    <string name="nombre">Nombre</string>
    <string name="hora">Hora</string>
    <string name="_00_00">00:00</string>
    <string name="fechaevento">Fecha</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="todo">TODO</string>
    <string name="imagen">TODO</string>
    <string name="olvide_usuario">Olvide usuario</string>
    <string name="indica_el_correo_del_usuario">Indica el correo del usuario</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="volver_al_inicio">volver al inicio</string>
    <string name="ya_tienes_un_usuario">Ya tienes un usuario ?</string>
    <string name="crea_nuevo_usuario">Crea nuevo usuario</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="escribe_un_numero_de_tel_fono">Escribe un numero de teléfono</string>
    <string name="introduce_un_email">Introduce un email</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="crea_tu_usuario">Crea tu usuario</string>
    <string name="digiplanner">Digiplanner</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="codigo">codigo</string>
    <string name="tu">Tu</string>
    <string name="textoo">TODO</string>
    <string name="dia">Dia</string>
    <string name="crear_post_it">Crear post it</string>
    <string name="lista_de_tareas">Lista de tareas</string>
    <string name="tel_fono">Teléfono</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="oooooooo">oooooooo</string>
    <string name="nombrecp">Nombre</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="ooooooooo">oooooooo</string>
    <string name="cuentap">TODO</string>
    <string name="titulo">titulo</string>
    <string name="guardar">Guardar</string>
    <string name="guardarpost">Guardar</string>
    <string name="conteniddo_post">conteniddo post</string>
    <string name="selecciona_fecha">Selecciona fecha</string>
    <string name="rellena">rellena</string>
    <string name="elige_hora">Elige hora</string>
    <string name="_00_000">00:00</string>
    <string name="xx_xx_xx">xx/xx/xx</string>
    <string name="listo">Listo</string>
    <string name="escribe_el_nuevo_evento">Escribe el nuevo evento</string>
    <string name="elige_para_crear_evento_nuevo">Elige para crear evento nuevo</string>
    <string name="d">D</string>
    <string name="s">S</string>
    <string name="v">V</string>
    <string name="l">L</string>
    <string name="current_date">Current Date</string>
    <string name="ma">Ma</string>
    <string name="x">X</string>
    <string name="j">J</string>
    <string name="calendarioh">TODO</string>
    <string name="date">TODO</string>
    <string name="elementos">Elementos</string>

</resources>