<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_cuentapersonal"
        android:icon="@drawable/persona"
        android:title="@string/title_cuentapersonal"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_anadir"
        android:icon="@drawable/mas"
        android:title="@string/title_anadir"/>

    <item
        android:id="@+id/navigation_postits"
        android:icon="@drawable/post"
        android:title="@string/title_postits"/>

    <item
        android:id="@+id/navigation_tablas"
        android:icon="@drawable/tabla"
        android:title="@string/title_tablas"/>

</menu>