<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cuentapersonal">

    <fragment
        android:id="@+id/navigation_cuentapersonal"
        android:name="com.example.digiplanner.ui.cuentapersonal.CuentaPersonalFragment"
        android:label="@string/title_cuentapersonal"
        tools:layout="@layout/fragment_cuentapersonal" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.digiplanner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_anadir"
        android:name="com.example.digiplanner.ui.anadir.AnadirFragment"
        android:label="@string/title_anadir"
        tools:layout="@layout/fragment_anadir" />

    <fragment
        android:id="@+id/navigation_postits"
        android:name="com.example.digiplanner.ui.postits.PostitsFragment"
        android:label="@string/title_postits"
        tools:layout="@layout/fragment_postits" />

    <fragment
        android:id="@+id/navigation_tablas"
        android:name="com.example.digiplanner.ui.tablas.TablasFragment"
        android:label="@string/title_tablas"
        tools:layout="@layout/fragment_tablas" />

</navigation>