<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/recycler_item_design">

    <androidx.cardview.widget.CardView
        android:id="@+id/vista"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="200dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/casapixel3"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginStart="80dp"
        android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/texto_muestraevento"
                    android:layout_width="67dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:text="@string/evento"
                    />

                <TextView
                    android:id="@+id/texto_muestraeventoguardado"
                    android:layout_width="67dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/nombre"
                    android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/texto_muestrahora"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/hora"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/texto_muestrahoraguardada"
                android:layout_width="67dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/_00_00"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/texto_muestrafecha"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/fechaevento"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/texto_muestrafechaguardada"
                android:layout_width="67dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/_00_00_00"
                android:textColor="@color/black"/>


        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/boton_eliminarevento"
        android:layout_width="46dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="349dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/ic_baseline_delete_sweep_24"
        android:contentDescription="@string/imagen"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />


</RelativeLayout>